--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   "dependencies": {
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "sequelize": "^6.37.5",
-    "tedious": "^18.6.1"
+    "mssql": "^11.0.1"
   }
 }
